--- a/taotao-cloud-microservice/taotao-cloud-monitor/Dockerfile
+++ b/taotao-cloud-microservice/taotao-cloud-monitor/Dockerfile
@@ -18,7 +18,7 @@ ARG APP_NAME=taotao-cloud-monitor
 ARG APP_VERSION=2025.12
 ARG APP_JAR_NAME=${APP_NAME}-${APP_VERSION}.jar
 ARG APP_PORT=33308
-ARG APP_PRROFILES=dev
+ARG APP_PRROFILES=docker
 ARG DINGDING_TOKEN_ID_ARG=xxxxxx
 ARG DINGDING_SECRET_ARG=xxxxxx
 ARG REQUEST_API_DOCS=1
