--- a/taotao-cloud-microservice/taotao-cloud-monitor/src/main/resources/bootstrap-docker.yml
+++ b/taotao-cloud-microservice/taotao-cloud-monitor/src/main/resources/bootstrap-docker.yml
@@ -4,7 +4,7 @@ server:
 spring:
   config:
     activate:
-      on-profile: dev
+      on-profile: docker
   pid:
     file: ${user.home}/logs/${spring.application.name}/${spring.application.name}.pid
   main:
