--- a/taotao-cloud-microservice/taotao-cloud-data-analysis/build.gradle
+++ b/taotao-cloud-microservice/taotao-cloud-data-analysis/build.gradle
@@ -30,7 +30,7 @@ dependencies {
     //https://search.maven.org/artifact/com.google.guava/guava
     implementation "com.google.guava:guava:33.5.0-jre"
     //https://search.maven.org/artifact/tools.jackson.core/jackson-annotations
-    implementation 'tools.jackson.core:jackson-annotations:2.20'
+    implementation "com.fasterxml.jackson.core:jackson-annotations:2.20"
 
     //https://search.maven.org/artifact/org.apache.hbase/hbase-client
     //implementation 'org.apache.hbase:hbase-client:2.5.9-hadoop3'
