--- a/taotao-cloud-ccsr/taotao-cloud-ccsr-server/build.gradle
+++ b/taotao-cloud-ccsr/taotao-cloud-ccsr-server/build.gradle
@@ -24,7 +24,7 @@ configurations {
             force "com.google.protobuf:protobuf-java-util:3.25.5"
         }
 
-        exclude group: "commons-logging", module: "commons-logging"
+        //exclude group: "commons-logging", module: "commons-logging"
     }
 }
 
