--- a/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-member/taotao-cloud-member-biz/build.gradle
+++ b/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-member/taotao-cloud-member-biz/build.gradle
@@ -43,7 +43,7 @@ dependencies {
     //https://search.maven.org/artifact/com.alipay.sdk/alipay-sdk-java
     implementation('com.alipay.sdk:alipay-sdk-java:4.40.498.ALL') {
         exclude group: "org.bouncycastle", module: "bcprov-jdk15on"
-        exclude group: "commons-logging", module: "commons-logging"
+        //exclude group: "commons-logging", module: "commons-logging"
         exclude group: "xml-apis", module: "xml-apis"
     }
 
