--- a/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-promotion/taotao-cloud-promotion-biz/build.gradle
+++ b/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-promotion/taotao-cloud-promotion-biz/build.gradle
@@ -58,8 +58,8 @@ configurations {
         exclude group: "log4j", module: "log4j"
         exclude group: "log4j", module: "slf4j-simple"
         exclude group: "org.slf4j", module: "slf4j-log4j12"
-        exclude group: "org.apache.logging.log4j", module: "log4j-slf4j-impl"
-        exclude group: "org.apache.logging.log4j", module: "log4j-to-slf4j"
+        //exclude group: "org.apache.logging.log4j", module: "log4j-slf4j-impl"
+        //exclude group: "org.apache.logging.log4j", module: "log4j-to-slf4j"
         //exclude group: "org.springframework.boot", module: "spring-boot-starter-tomcat"
         exclude group: "org.springframework.boot", module: "spring-boot-starter-undertow"
     }
