--- a/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-sys/build.gradle
+++ b/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-sys/build.gradle
@@ -29,7 +29,7 @@ allprojects {
             //exclude group: "org.apache.logging.log4j", module: "log4j-api"
             //exclude group: "org.springframework.boot", module: "spring-boot-starter-tomcat"
         exclude group: "org.springframework.boot", module: "spring-boot-starter-undertow"
-            exclude group: "commons-logging", module: "commons-logging"
+            //exclude group: "commons-logging", module: "commons-logging"
         }
     }
 }
