--- a/taotao-cloud-mq/taotao-cloud-mq-consistency/build.gradle
+++ b/taotao-cloud-mq/taotao-cloud-mq-consistency/build.gradle
@@ -16,10 +16,10 @@ dependencies {
         exclude group: 'org.slf4j', module: 'slf4j-api'
     }
     api ("com.alipay.sofa:jraft-core:1.4.0") {
-        exclude group: "org.apache.logging.log4j", module: "log4j-api"
-        exclude group: "org.apache.logging.log4j", module: "log4j-core"
-        exclude group: "org.apache.logging.log4j", module: "log4j-slf4j-impl"
-        exclude group: "org.apache.logging.log4j", module: "log4j-jcl"
+        //exclude group: "org.apache.logging.log4j", module: "log4j-api"
+        //exclude group: "org.apache.logging.log4j", module: "log4j-core"
+        //exclude group: "org.apache.logging.log4j", module: "log4j-slf4j-impl"
+        //exclude group: "org.apache.logging.log4j", module: "log4j-jcl"
     }
 
 }
