--- a/taotao-cloud-rpc/taotao-cloud-rpc-dashboard/build.gradle
+++ b/taotao-cloud-rpc/taotao-cloud-rpc-dashboard/build.gradle
@@ -18,8 +18,8 @@ dependencies {
         //exclude group: "org.springframework.boot", module: "spring-boot-starter-tomcat"
         exclude group: "org.springframework.boot", module: "spring-boot-starter-undertow"
     }
-        //api "org.springframework.boot:spring-boot-starter-undertow"
-        api "org.springframework.boot:spring-boot-starter-tomcat"
+    //api "org.springframework.boot:spring-boot-starter-undertow"
+    api "org.springframework.boot:spring-boot-starter-tomcat"
     api 'org.springframework.boot:spring-boot-starter-aspectj'
 }
 
@@ -28,7 +28,7 @@ configurations {
         resolutionStrategy.cacheChangingModulesFor 0, "seconds"
         resolutionStrategy.cacheDynamicVersionsFor 0, "seconds"
 
-        exclude group: "commons-logging", module: "commons-logging"
+        //exclude group: "commons-logging", module: "commons-logging"
     }
 }
 
