--- a/taotao-cloud-job/taotao-cloud-job-dashboard/build.gradle
+++ b/taotao-cloud-job/taotao-cloud-job-dashboard/build.gradle
@@ -19,7 +19,7 @@ configurations {
         resolutionStrategy.cacheChangingModulesFor 0, "seconds"
         resolutionStrategy.cacheDynamicVersionsFor 0, "seconds"
 
-        exclude group: "commons-logging", module: "commons-logging"
+        //exclude group: "commons-logging", module: "commons-logging"
     }
 }
 
