--- a/taotao-cloud-job/taotao-cloud-job-nameserver/build.gradle
+++ b/taotao-cloud-job/taotao-cloud-job-nameserver/build.gradle
@@ -23,6 +23,6 @@ configurations {
         resolutionStrategy.cacheChangingModulesFor 0, "seconds"
         resolutionStrategy.cacheDynamicVersionsFor 0, "seconds"
 
-        exclude group: "commons-logging", module: "commons-logging"
+        //exclude group: "commons-logging", module: "commons-logging"
     }
 }
