--- a/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-auth/taotao-cloud-auth-biz/build.gradle
+++ b/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-auth/taotao-cloud-auth-biz/build.gradle
@@ -7,7 +7,7 @@ dependencies {
     //cloud
     implementation "io.github.shuigedeng:taotao-cloud-starter-alibaba"
     implementation "io.github.shuigedeng:taotao-cloud-starter-ttc"
-    implementation "io.github.shuigedeng:taotao-cloud-starter-openfeign"
+    //implementation "io.github.shuigedeng:taotao-cloud-starter-openfeign"
 
     //boot
     implementation "io.github.shuigedeng:taotao-boot-starter-sentinel"
