--- a/taotao-cloud-microservice/taotao-cloud-bff/build.gradle
+++ b/taotao-cloud-microservice/taotao-cloud-bff/build.gradle
@@ -12,7 +12,7 @@ dependencies {
     implementation "io.github.shuigedeng:taotao-cloud-starter-stream"
     implementation "io.github.shuigedeng:taotao-cloud-starter-alibaba"
     implementation "io.github.shuigedeng:taotao-cloud-starter-ttc"
-    implementation "io.github.shuigedeng:taotao-cloud-starter-openfeign"
+    //implementation "io.github.shuigedeng:taotao-cloud-starter-openfeign"
     implementation "io.github.shuigedeng:taotao-cloud-starter-sentinel"
 
     //boot
