--- a/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-goods/taotao-cloud-goods-biz/src/main/resources/application-dev.yml
+++ b/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-goods/taotao-cloud-goods-biz/src/main/resources/application-dev.yml
@@ -701,7 +701,7 @@ spring:
     hibernate:
       ddl-auto: none
       naming:
-        implicit-strategy: org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy
+        implicit-strategy: org.springframework.boot.hibernate.SpringImplicitNamingStrategy
         physical-strategy: org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
     properties:
       hibernate:
