--- a/taotao-cloud-microservice/taotao-cloud-modulith/src/main/resources/application-dev.yml
+++ b/taotao-cloud-microservice/taotao-cloud-modulith/src/main/resources/application-dev.yml
@@ -690,7 +690,7 @@ spring:
       #none：禁用DDL处理
       ddl-auto: update
       naming:
-        implicit-strategy: org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy
+        implicit-strategy: org.springframework.boot.hibernate.SpringImplicitNamingStrategy
         physical-strategy: org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
     #properties:
     #  hibernate:
