--- a/taotao-cloud-ccsr/taotao-cloud-ccsr-server/build.gradle
+++ b/taotao-cloud-ccsr/taotao-cloud-ccsr-server/build.gradle
@@ -2,7 +2,9 @@ apply from: rootProject.file('gradle/springboot.gradle')
 
 dependencies {
     api "io.github.shuigedeng:taotao-boot-starter-core"
-
+    //api "io.github.shuigedeng:taotao-boot-starter-logger"
+    //api "io.github.shuigedeng:taotao-boot-starter-metrics"
+    //api "io.github.shuigedeng:taotao-boot-starter-tracer"
 
     api project(":taotao-cloud-ccsr:taotao-cloud-ccsr-server-starter")
 
