--- a/taotao-cloud-microservice/taotao-cloud-ai/build.gradle
+++ b/taotao-cloud-microservice/taotao-cloud-ai/build.gradle
@@ -53,8 +53,8 @@ repositories {
 }
 
 dependencies {
-    implementation platform("org.springframework.ai:spring-ai-bom:1.1.2")
-    implementation platform("com.alibaba.cloud.ai:spring-ai-alibaba-bom:1.1.0.0-M5")
+    implementation platform("org.springframework.ai:spring-ai-bom:2.0.0-M1")
+    implementation platform("com.alibaba.cloud.ai:spring-ai-alibaba-bom:1.1.0.0-RC1")
 
     //cloud
     implementation "io.github.shuigedeng:taotao-cloud-starter-stream"
@@ -225,9 +225,9 @@ dependencies {
     implementation "com.googlecode.aviator:aviator:5.4.3"
 
     //https://search.maven.org/artifact/com.google.protobuf/protobuf-java
-    implementation "com.google.protobuf:protobuf-java:4.32.0"
+    implementation "com.google.protobuf:protobuf-java:4.33.2"
     //https://search.maven.org/artifact/com.google.protobuf/protobuf-java-util
-    implementation "com.google.protobuf:protobuf-java-util:4.32.0"
+    implementation "com.google.protobuf:protobuf-java-util:4.33.2"
     //https://search.maven.org/artifact/com.googlecode.protobuf-java-format/protobuf-java-format
     //implementation "com.googlecode.protobuf-java-format:protobuf-java-format:1.4"
 
