--- a/taotao-cloud-microservice/taotao-cloud-shell/build.gradle
+++ b/taotao-cloud-microservice/taotao-cloud-shell/build.gradle
@@ -26,7 +26,7 @@ dependencies {
     //}
 
     //https://central.sonatype.com/artifact/org.springframework.shell/spring-shell-starter
-    implementation 'org.springframework.shell:spring-shell-starter:3.4.1'
+    implementation 'org.springframework.shell:spring-shell-starter:4.0.0-M2'
 
     //，jcommander 是一个只有几十 kb 的 Java 命令行参数解析工具，可以通过注解的方式快速实现命令行参数解析。
     //https://search.maven.org/artifact/com.beust/jcommander
