--- a/taotao-cloud-microservice/taotao-cloud-gateway/build.gradle
+++ b/taotao-cloud-microservice/taotao-cloud-gateway/build.gradle
@@ -91,12 +91,12 @@ configurations {
             force "com.google.protobuf:protobuf-java-util:3.25.5"
         }
 
-        exclude group: "org.springframework", module: "spring-webmvc"
+        //exclude group: "org.springframework", module: "spring-webmvc"
         exclude group: "org.springframework.boot", module: "spring-boot-starter-data-jpa"
         //exclude group: "org.springframework.boot", module: "spring-boot-starter-tomcat"
         exclude group: "org.springframework.boot", module: "spring-boot-starter-undertow"
-        exclude group: "com.alibaba.csp", module: "sentinel-spring-webmvc-adapter"
-        exclude group: "com.alibaba.csp", module: "sentinel-spring-webmvc-v6x-adapter"
+        //exclude group: "com.alibaba.csp", module: "sentinel-spring-webmvc-adapter"
+        //exclude group: "com.alibaba.csp", module: "sentinel-spring-webmvc-v6x-adapter"
         exclude group: "com.querydsl", module: "querydsl-apt"
         //exclude group: "commons-logging", module: "commons-logging"
     }
