--- a/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-goods/taotao-cloud-goods-biz/Dockerfile
+++ b/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-goods/taotao-cloud-goods-biz/Dockerfile
@@ -45,6 +45,10 @@ ENV JAVA_OPTIONS="-Xms512m \
                   -XX:+ShowCodeDetailsInExceptionMessages \
                   -XX:ParallelGCThreads=4 \
                   -Xlog:async \
+                  -XX:+UseContainerSupport \
+                  -XX:MaxRAMPercentage=75 \
+                  -XX:+UseContainerSupport \
+                  -XX:MaxRAMPercentage=75 \
                   -XX:AsyncLogBufferSize=409600 \
                   -Xlog:gc*=debug:file=/root/logs/${APP_NAME}/${APP_NAME}.gc.log:utctime,level,tags:filecount=50,filesize=100M \
                   -Xlog:jit+compilation=debug:file=/root/logs/${APP_NAME}/${APP_NAME}.jit.compile.log:utctime,level,tags:filecount=10,filesize=100M \
