--- a/taotao-cloud-bigdata/taotao-cloud-hudi/build.gradle
+++ b/taotao-cloud-bigdata/taotao-cloud-hudi/build.gradle
@@ -13,41 +13,42 @@ dependencies {
     implementation "com.alibaba.fastjson2:fastjson2:2.0.60"
     implementation "com.alibaba.fastjson2:fastjson2-extension-spring6:2.0.59"
 
-    implementation("org.apache.spark:spark-core_2.13:4.0.1")
-    implementation("org.apache.spark:spark-catalyst_2.13:4.0.1")
-    implementation("org.apache.spark:spark-graphx_2.13:4.0.1")
-    implementation("org.apache.spark:spark-sql_2.13:4.0.1") {
+    implementation("org.apache.spark:spark-core_2.13:4.1.0")
+    implementation("org.apache.spark:spark-catalyst_2.13:4.1.0")
+    implementation("org.apache.spark:spark-graphx_2.13:4.1.0")
+    implementation("org.apache.spark:spark-sql_2.13:4.1.0") {
         exclude group: "org.codehaus.janino", module: "janino"
     }
-    implementation("org.apache.spark:spark-streaming_2.13:4.0.1")
-    implementation("org.apache.spark:spark-mllib_2.13:4.0.1")
-    implementation("org.apache.spark:spark-hive_2.13:4.0.1")
-    implementation("org.apache.spark:spark-avro_2.13:4.0.1")
-    implementation("org.apache.spark:spark-streaming-kafka-0-10_2.13:4.0.1")
-    implementation("org.apache.spark:spark-sql-kafka-0-10_2.13:4.0.1")
+    implementation("org.apache.spark:spark-streaming_2.13:4.1.0")
+    implementation("org.apache.spark:spark-mllib_2.13:4.1.0")
+    implementation("org.apache.spark:spark-hive_2.13:4.1.0")
+    implementation("org.apache.spark:spark-avro_2.13:4.1.0")
+    implementation("org.apache.spark:spark-streaming-kafka-0-10_2.13:4.1.0")
+    implementation("org.apache.spark:spark-sql-kafka-0-10_2.13:4.1.0")
 
-    implementation "org.elasticsearch:elasticsearch-spark-30_2.13:9.0.2"
+    implementation "org.elasticsearch:elasticsearch-spark-30_2.13:9.2.2"
 
-    implementation("org.apache.hudi:hudi-common:1.1.0")
-    implementation("org.apache.hudi:hudi-client:1.1.0")
-    implementation("org.apache.hudi:hudi-flink-client:1.1.0")
-    implementation("org.apache.hudi:hudi-flink1.20-bundle:1.1.0")
-    implementation("org.apache.hudi:hudi-flink1.20.x:1.1.0")
-    implementation("org.apache.hudi:hudi-gcp-bundle:1.1.0")
-    //implementation("org.apache.hudi:hudi-cli-bundle_2.13:1.1.0")
-    implementation("org.apache.hudi:hudi-datahub-sync-bundle:1.1.0")
-    implementation("org.apache.hudi:hudi-hadoop-mr-bundle:1.1.0")
-    implementation("org.apache.hudi:hudi-hive-sync-bundle:1.1.0")
-    implementation("org.apache.hudi:hudi-kafka-connect-bundle:1.1.0")
-    implementation("org.apache.hudi:hudi-metaserver-server-bundle:1.1.0")
-    implementation("org.apache.hudi:hudi-metaserver-client:1.1.0")
-    implementation("org.apache.hudi:hudi-presto-bundle:1.1.0")
-    implementation("org.apache.hudi:hudi-trino-bundle:1.1.0")
-    implementation("org.apache.hudi:hudi-timeline-server-bundle:1.1.0")
-    implementation("org.apache.hudi:hudi-utilities-bundle_2.13:1.1.0")
-    implementation("org.apache.hudi:hudi-utilities-slim-bundle_2.13:1.1.0")
-    //implementation("org.apache.hudi:hudi-utilities_2.13:1.1.0")
-    implementation("org.apache.hudi:hudi-sync:1.1.0")
+    implementation("org.apache.hudi:hudi-common:1.1.1")
+    implementation("org.apache.hudi:hudi-client:1.1.1")
+    implementation("org.apache.hudi:hudi-flink-client:1.1.1")
+    implementation("org.apache.hudi:hudi-flink1.20-bundle:1.1.1")
+    implementation("org.apache.hudi:hudi-flink1.20.x:1.1.1")
+    implementation("org.apache.hudi:hudi-spark4.0.x_2.12:1.1.1")
+    implementation("org.apache.hudi:hudi-gcp-bundle:1.1.1")
+    //implementation("org.apache.hudi:hudi-cli-bundle_2.13:1.1.1")
+    implementation("org.apache.hudi:hudi-datahub-sync-bundle:1.1.1")
+    implementation("org.apache.hudi:hudi-hadoop-mr-bundle:1.1.1")
+    implementation("org.apache.hudi:hudi-hive-sync-bundle:1.1.1")
+    implementation("org.apache.hudi:hudi-kafka-connect-bundle:1.1.1")
+    implementation("org.apache.hudi:hudi-metaserver-server-bundle:1.1.1")
+    implementation("org.apache.hudi:hudi-metaserver-client:1.1.1")
+    //implementation("org.apache.hudi:hudi-presto-bundle:1.1.1")
+    //implementation("org.apache.hudi:hudi-trino-bundle:1.1.1")
+    implementation("org.apache.hudi:hudi-timeline-server-bundle:1.1.1")
+    implementation("org.apache.hudi:hudi-utilities-bundle_2.13:1.1.1")
+    implementation("org.apache.hudi:hudi-utilities-slim-bundle_2.13:1.1.1")
+    //implementation("org.apache.hudi:hudi-utilities_2.13:1.1.1")
+    implementation("org.apache.hudi:hudi-sync:1.1.1")
 
     implementation("org.apache.hadoop:hadoop-common:3.4.2")
     implementation("org.apache.hadoop:hadoop-client:3.4.2")
@@ -93,7 +94,7 @@ configurations {
             force "org.apache.avro:avro:1.12.0"
             force "com.google.guava:guava:33.5.0-jre"
             force "org.codehaus.janino:janino:3.1.12"
-            force "org.apache.spark:spark-core_2.13:4.0.1"
+            force "org.apache.spark:spark-core_2.13:4.1.0"
             force "org.glassfish:javax.el:3.0.0"
         }
 
