--- a/taotao-cloud-bigdata/taotao-cloud-hudi/build.gradle
+++ b/taotao-cloud-bigdata/taotao-cloud-hudi/build.gradle
@@ -26,7 +26,7 @@ dependencies {
     implementation("org.apache.spark:spark-streaming-kafka-0-10_2.13:4.1.0")
     implementation("org.apache.spark:spark-sql-kafka-0-10_2.13:4.1.0")
 
-    implementation "org.elasticsearch:elasticsearch-spark-30_2.13:9.2.2"
+    //implementation "org.elasticsearch:elasticsearch-spark-30_2.13:9.2.2"
 
     implementation("org.apache.hudi:hudi-common:1.1.1")
     implementation("org.apache.hudi:hudi-client:1.1.1")
